[workspace]
members = ["json-rpc/client", "json-rpc/server", "paytube"]

resolver = "2"

[workspace.package]
version = "2.3.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
agave-feature-set = "2.3.0"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = { version = "1.5.2", features = ["derive"] }
bs58 = { version = "0.5.1", default-features = false }
clap = "2.33.1"
crossbeam-channel = "0.5.13"
env_logger = "0.9.3"
home = "0.5"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
solana-account-decoder = { path = "../../account-decoder" }
solana-bpf-loader-program = { path = "../../programs/bpf_loader" }
solana-client = { path = "../../client" }
solana-compute-budget = { path = "../../compute-budget" }
solana-feature-set-interface = "2.2.4"
solana-logger = "=2.3.1"
solana-perf = { path = "../../perf" }
solana-program-runtime = { path = "../../program-runtime" }
solana-rpc-client-api = { path = "../../rpc-client-api" }
solana-sdk = "=2.2.1"
solana-svm = { path = "../" }
solana-system-program = { path = "../../programs/system" }
solana-version = { path = "../../version" }
solana-test-validator = { path = "../../test-validator" }
solana-transaction-context = { path = "../../transaction-context" }
solana-transaction-status = { path = "../../transaction-status" }
spl-associated-token-account = "=6.0.0"
spl-token = "=7.0.0"
spl-token-2022 = "=7.0.0"
termcolor = "1.4.1"
thiserror = "1.0.68"
tokio = "1.29.1"
tokio-util = "0.7"
yaml-rust = "0.4"

[workspace.devdependencies]
agave-feature-set = "2.3.0"

[patch.crates-io]
crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }
solana-curve25519 = { path = "../../curves/curve25519" }
solana-zk-sdk = { path = "../../zk-sdk" }
solana-feature-set-interface = { path = "../../../solana-sdk/feature-set-interface" }
solana-pubkey = { path = "../../../solana-sdk/pubkey" }
solana-message = { path = "../../../solana-sdk/message" }
solana-sanitize = { path = "../../../solana-sdk/sanitize" }
solana-instruction = { path = "../../../solana-sdk/instruction" }
solana-transaction = { path = "../../../solana-sdk/transaction" }
solana-hash = { path = "../../../solana-sdk/hash" }
solana-system-transaction = { path = "../../../solana-sdk/system-transaction" }
solana-signature = { path = "../../../solana-sdk/signature" }
solana-client-traits = { path = "../../../solana-sdk/client-traits" }
solana-signer = { path = "../../../solana-sdk/signer" }
solana-keypair = { path = "../../../solana-sdk/keypair" }
solana-transaction-error = { path = "../../../solana-sdk/transaction-error" }
solana-derivation-path = { path = "../../../solana-sdk/derivation-path" }
solana-seed-derivable = { path = "../../../solana-sdk/seed-derivable" }
solana-commitment-config = { path = "../../../solana-sdk/commitment-config" }
solana-precompiles = { path = "../../../solana-sdk/precompiles" }
solana-account = { path = "../../../solana-sdk/account" }
solana-epoch-info = { path = "../../../solana-sdk/epoch-info" }
solana-sysvar = { path = "../../../solana-sdk/sysvar" }
solana-sysvar-id = { path = "../../../solana-sdk/sysvar-id" }
solana-program = { path = "../../../solana-sdk/program" }
solana-epoch-schedule = { path = "../../../solana-sdk/epoch-schedule" }
solana-rent = { path = "../../../solana-sdk/rent" }
solana-last-restart-slot = { path = "../../../solana-sdk/last-restart-slot" }
solana-slot-hashes = { path = "../../../solana-sdk/slot-hashes" }
spl-associated-token-account = { path = "../../../solana-program-library/associated-token-account/program" }
spl-token = { path = "../../../solana-program-library/token/program" }
spl-token-2022 = { path = "../../../solana-program-library/token/program-2022" }
spl-pod = { path = "../../../solana-program-library/libraries/pod" }
solana-epoch-rewards = { path = "../../../solana-sdk/epoch-rewards" }
solana-clock = { path = "../../../solana-sdk/clock" }
